--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 
     <head>
         <title> leo's awesome web page</title>
-    </head>
+    </head> 
 
     <body>
         Hello there, awesome person!
     </body>
 </html>
+
+
+<h1> hello I am Leo </h1>
