--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
     <head>
         <title> leo's awesome web page</title>
-    </head> 
+<img src="https://avatars.githubusercontent.com/u/82857140?v=4">
+
 
     <body>
         Hello there, awesome person!
