--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 
 
     <body>
-        Hello there, awesome person!
+        <h1> Hello there, awesome person! </h1>
     </body>
 </html>
 
-
-<h1> hello I am Leo </h1>
