--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-
-    <head>
-        <title> leo's awesome web page</title>
-<img src="https://avatars.githubusercontent.com/u/82857140?v=4">
-
-
-    <body>
-        Hello there, awesome person!
-    </body>
+<html>
+<head>
+<title>
+    leo's page
+</title>
+</head>
+<body>
+   <img src="https://avatars.githubusercontent.com/u/82857140?v=4">
+   <h1> Hello there, awesome person! </h1>
+ 
+   
+ <ol>
+    <li>https://pokemondb.net/</li>
+    <li>https://hangouts.google.com/</li>
+    <li>Ordered list</li>
+</ol>
+ 
+</body>
 </html>
-
-
-<h1> hello I am Leo </h1>
