--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li>https://pokemondb.net/</li>
     <li>https://hangouts.google.com/</li>
     <li>Ordered list</li>
+       <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
 </ol>
  
 </body>
