--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>
     leo's page
+    <link rel="stylesheet" href="style.css">
 </title>
 </head>
 <body>
@@ -12,9 +13,9 @@
  <ol>
     <li>https://pokemondb.net/</li>
     <li>https://hangouts.google.com/</li>
-    <li>Ordered list</li>
-       <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
+    <li>Ordered list</li> 
 </ol>
- 
+ <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li>
+ <li><a href="https://hangouts.google.com">This is a link to the pokemon site !</a></li>
 </body>
 </html>
