--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
  <ol>
     <li>https://pokemondb.net/</li>
     <li>https://hangouts.google.com/</li>
-    <li>Ordered list</li> 
+    <li>https://www.tiktok.com/?lang=en</li> 
 </ol>
  <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li>
- <li><a href="https://hangouts.google.com">This is a link to the pokemon site !</a></li>
+ <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li>
+ <li><a href="//www.tiktok.com/?lang=en">This is a link to the tictok site !</a></li>
+       
 </body>
 </html>
