--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <li>https://hangouts.google.com/</li>
     <li>https://www.tiktok.com/?lang=en</li> 
 </ol>
- <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li>
- <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li>
- <li><a href="//www.tiktok.com/?lang=en">This is a link to the tictok site !</a></li>
-       
+   <a href="https://pokemondb.net" target="_blank">Go</a>
+    <a href="https://hangouts.google.com" target="_blank">Go</a>
+    <a href="https://www.tiktok.com" target="_blank">Go</a>
 </body>
 </html>
