--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <li>https://hangouts.google.com/</li>
     <li>https://www.tiktok.com/?lang=en</li> 
 </ol>
-   [go](https://pokemondb.net){:target="_blank"}
-   [go](https://hangouts.google.com){:target="_blank"}
-   [go](https://www.tiktok.com){:target="_blank"}
+    <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
+    <li><a href="https://hangouts.google.com">This is a link to the pokemon site !</a></li> 
+    <li><a href="https://www.tiktok.com">This is a link to the pokemon site !</a></li> 
 </body>
 </html>
