--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <img src="https://avatars.githubusercontent.com/u/82857140?v=4">
-   <h1> Hello there, awesome person! </h1>
+   <h1> Hello there! my name is Leo </h1>
  
    
  <ol>
