--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li>https://www.tiktok.com/?lang=en</li> 
 </ol>
     <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
-    <li><a href="https://hangouts.google.com">This is a link to the pokemon site !</a></li> 
-    <li><a href="https://www.tiktok.com">This is a link to the pokemon site !</a></li> 
+    <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li> 
+    <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li> 
 </body>
 </html>
