--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
 <title>
     leo's page
-    <link rel="stylesheet" href="style.css">
 </title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <img src="https://avatars.githubusercontent.com/u/82857140?v=4">
+   <img src=![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)>
    <h1> Hello there! my name is Leo </h1>
-   <h3> the websites below are my most favorite websites that i ever used <h3>
+   <h3> The websites below are one of my most favorite websites that I ever used. </h3>
     
  
    
@@ -17,7 +17,8 @@
     <li>https://hangouts.google.com/</li>
     <li>https://www.tiktok.com/?lang=en</li> 
 </ol>
-    <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
+    <h3> here is a short cut to my favorite websites </h3> 
+       <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
     <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li> 
     <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li> 
 </body>
