moved some stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h3> here is a short cut to my favorite websites </h3> 
        <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
     <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li> 
-    <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li> 
+    <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li>
+    <img src=![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)>
 </body>
 </html>
