--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <title>
-    leo's page
+    My website 
 </title>
 </head>
 <body>
-   <img src=![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)>
-   <h1> Hello there! my name is Leo </h1>
-   <h3> The websites below are one of my most favorite websites that I ever used. </h3>
+   
+   <h1> Hello there! </h1>
+   <h3> My name is Leo and the websites below are one of my most favorite websites that I ever used. </h3>
    
  <ol>
     <li>https://pokemondb.net/</li>
@@ -18,6 +18,5 @@
        <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
     <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li> 
     <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li>
-    <img src=![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)>
 </body>
 </html>
