--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li>https://hangouts.google.com/</li>
     <li>https://www.tiktok.com/?lang=en</li> 
 </ol>
-    <h3> here is a short cut to my favorite websites </h3> 
+    <h3> Here is a short cut to my favorite websites </h3> 
        <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
     <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li> 
     <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li>
