--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <html>
 <head>
 <title>
-    Leo's page
+    Leo's music page
 </title>
 </head>
 <body>
    
-   <h1> Hello there! </h1>
-   <h3> My name is Leo and the websites below are one of my most favorite websites that I ever used. </h3>
-   
- <ol>
-    <li>https://pokemondb.net/</li>
-    <li>https://hangouts.google.com/</li>
-    <li>https://www.tiktok.com/?lang=en</li> 
-</ol>
-    <h3> Here is a short cut to my favorite websites </h3> 
-       <li><a href="https://pokemondb.net">This is a link to the pokemon site !</a></li> 
-    <li><a href="https://hangouts.google.com">This is a link to the hangouts site !</a></li> 
-    <li><a href="https://www.tiktok.com">This is a link to the tictok site !</a></li>
 </body>
 </html>
